--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
-pytorch_lightning==1.3.2
-transformers==4.6.0
-Pillow==8.1.0
-tqdm==4.56.0
-ipdb==0.13.4
-numpy==1.19.5
-einops==0.3.0
+# pytorch_lightning==1.3.2
+# transformers==4.6.0
+# Pillow==8.1.0
+# tqdm==4.56.0
+# ipdb==0.13.4
+# numpy==1.19.5
+# einops==0.3.0
 # pyarrow==2.0.0
-pyarrow>=6.0.1,<15.0.0
-sacred==0.8.2
-pandas==1.1.5
-timm==0.4.12
-ftfy
+# sacred==0.8.2
+# pandas==1.1.5
+# timm==0.4.12
+# ftfy
 # torchvision~=0.8.2
-torchvision==0.17.2
-torch~=1.7.1
+# torch~=1.7.1
+
+# Core deep learning libraries
+torch==1.13.1
+torchvision==0.14.1
+pytorch_lightning==1.9.0
+
+# Transformers & related utilities
+transformers==4.30.2
+ftfy==6.1.1
+einops==0.6.1
+timm==0.6.13
+
+# Utility libraries
+Pillow==9.5.0
+tqdm==4.66.2
+ipdb==0.13.13
+numpy==1.23.5
+pandas==1.5.3
+pyarrow>=6.0.1,<15.0.0
+sacred==0.8.4
+
