--- a/requirements.txt
+++ b/requirements.txt
@@ -13,23 +13,16 @@
 # torchvision~=0.8.2
 # torch~=1.7.1
 
-# Core deep learning libraries
-torch==1.13.1
-torchvision==0.14.1
-pytorch_lightning==1.9.0
 
-# Transformers & related utilities
-transformers==4.30.2
-ftfy==6.1.1
-einops==0.6.1
-timm==0.6.13
-
-# Utility libraries
+pytorch_lightning==2.5.1.post0
+transformers==4.40.1
 Pillow==9.5.0
-tqdm==4.66.2
+tqdm==4.67.1
 ipdb==0.13.13
-numpy==1.23.5
-pandas==1.5.3
+numpy==2.3.0
+einops==0.6.1
 pyarrow>=6.0.1,<15.0.0
 sacred==0.8.4
-
+pandas==1.5.3
+timm==0.6.13
+ftfy==6.1.1
