--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,15 @@
 
 
 pytorch_lightning==2.5.1.post0
-transformers==4.40.1
+torchvision==0.17.2
+transformers==4.41.0
 Pillow==9.5.0
 tqdm==4.67.1
 ipdb==0.13.13
-numpy==2.3.0
+numpy==2.2.0
 einops==0.6.1
-pyarrow>=6.0.1,<15.0.0
+pyarrow==15.0.2
 sacred==0.8.4
-pandas==1.5.3
+pandas==2.2.2
 timm==0.6.13
 ftfy==6.1.1
