--- a/requirements.txt
+++ b/requirements.txt
@@ -14,16 +14,32 @@
 # torch~=1.7.1
 
 
-pytorch_lightning==2.5.1.post0
-torchvision==0.17.2
-transformers==4.41.0
-Pillow==9.5.0
-tqdm==4.67.1
-ipdb==0.13.13
-numpy==2.2.0
-einops==0.6.1
-pyarrow==15.0.2
-sacred==0.8.4
+# Core dependencies
+numpy==1.26.4
 pandas==2.2.2
-timm==0.6.13
+pyarrow==15.0.2
+Pillow==9.5.0
+
+# Torch and vision
+torch==2.1.2
+torchvision==0.16.2
+pytorch_lightning==1.3.2  # adjust if needed, else can be latest compatible
+
+# Transformers and tokenizer
+transformers==4.41.0
+tokenizers==0.19.1
+
+# Logging and experiment tracking
+sacred==0.8.4
 ftfy==6.1.1
+einops==0.6.1
+ipdb==0.13.13
+
+# Utilities
+docopt==0.6.2
+munch==2.5.0
+tqdm==4.56.0
+
+# Optional but safe additions
+matplotlib==3.7.2
+scikit-learn==1.2.2
